# AI-Pong-of-Death

./: .gitattributes  AIOfDeath.cabal  AIOfDeath.lkshs  AIOfDeath.lkshw  AIPongOfDeath.sdf  AIPongOfDeath.sln  CMakeLists.txt  HelloHaskell.cabal  PongOfDeath.lkshs  README.md  build.sbt
AIPongOfDeath/: AIPongOfDeath.aps  AIPongOfDeath.vcxproj  AIPongOfDeath.vcxproj.filters  Box.cpp  Box.h  Input.cpp  Input.h  Main.cpp  Main.h  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  Render.cpp  Render.h
core/: Main.cpp  Main.h
graphics/: Box.cpp  Box.h  Render.cpp  Render.h
input/: Input.cpp  Input.h
physics/: Physics.cpp  Physics.h
src/: Bindings.hs  Cube.hs  Display.hs  Main.hs  Main.hs~  Paddle.hs  Render.hs
src/main/scala/ai/: Brain.scala  Input.scala  Neuron.scala  Synapse.scala
src/main/scala/core/: Main.scala
src/main/scala/pong/ai/: Brain.scala  Input.scala  Neuron.scala  Synapse.scala
src/main/scala/pong/core/: Main.scala
src/main/scala/pong/graphics/: Image.scala  ImageCache.scala  Render.scala
src/main/scala/pong/input/: Input.scala
src/main/scala/pong/physics/: BallPhys.scala
