name: AIOfDeath
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
license-file: LICENSE
author: Mnenmenth

executable AIOfDeath
    main-is: Main.hs
    build-depends:
        base >=4.8 && <4.9,
        OpenGL -any,
        OpenGLRaw -any,
        GLFW-b -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paddle
        Render

